# OnDeviceLLM-Android

./: .gitignore  README.md
.github/workflows/: build-apk.yml
android-app/: build.gradle.kts  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
android-app/app/src/main/java/com/hkai/ondevice/: MainActivity.kt
android-app/app/src/main/java/com/hkai/ondevice/llamacpp/: LlamaBridge.kt
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
android-app/app/src/main/res/values/: strings.xml
benches/: prompts.csv  run_bench.py
mlc-android/: README.md
model-packs/: schema.json
scripts/: adb_install.sh  convert_prompts_to_task.py  gguf_pack.py
webllm-pwa/: app.js  index.html  manifest.json  service-worker.js
